1.使用新的网络引擎, 开发开奖公告.

--- a/IOSBoilerplate/ruyicai-Info.plist
+++ b/IOSBoilerplate/ruyicai-Info.plist
@@ -57,5 +57,15 @@
 	<string>2088701018009871</string>
 	<key>UIStatusBarHidden</key>
 	<false/>
+	<key>UIStatusBarTintParameters</key>
+	<dict>
+		<key>UINavigationBar</key>
+		<dict>
+			<key>Style</key>
+			<string>UIBarStyleDefault</string>
+			<key>Translucent</key>
+			<false/>
+		</dict>
+	</dict>
 </dict>
 </plist>
