--- a/IOSBoilerplate/ruyicai-Info.plist
+++ b/IOSBoilerplate/ruyicai-Info.plist
@@ -62,9 +62,9 @@
 		<key>UINavigationBar</key>
 		<dict>
 			<key>Style</key>
-			<string>UIBarStyleDefault</string>
+			<string>UIBarStyleBlack</string>
 			<key>Translucent</key>
-			<false/>
+			<true/>
 		</dict>
 	</dict>
 </dict>
